# tehnesis_test_app

./: .gitignore  README.md  pyproject.toml
src/bot/: app.py  browser_manager.py  database.py  exceptions.py
tests/: conftest.py  test_load_file_to_dataframe.py  test_price_parsing.py
tests/fixtures/: doc1.csv
